<resources>
    <string name="app_name">Online Tutor</string>
    <string name="login_button">Login</string>
    <string name="login">Login</string>
    <string name="online_tutor">Online Tutor</string>
    <string name="or_register_button">Or register a new account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fullname">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="or_login_button">You already have an account?</string>
    <string name="english">English</string>
    <string name="france">France</string>
    <string name="math">Math</string>
    <string name="physic">Physic</string>
    <string name="search">Search</string>
    <string name="list_course">List courses</string>
    <string name="my_course">My courses</string>
    <string name="add_course">Learn this course</string>
    <string name="view_course">View this course</string>


    <string name="title_activity_my_course">MyCourseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="remember_me">Remember me</string>

    <string name="logout">Logout</string>
    <string name="add_new_course">Add a new courset</string>
    <string name="save">Save</string>
    <string name="course_id">Course ID</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="course_type">Subject</string>

    <string name="add_course_title">Add a new course</string>
    <string name="edit_course_title">Edit course</string>
    <string name="pause">Pause</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_map">Open map</string>
    <string name="course_detail">Course Detail</string>
</resources>