<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditCourse">

    <TextView
        android:id="@+id/add_edit_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_text"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/course_id"
        android:background="@drawable/outlined_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_course_title" />
    <EditText
        android:id="@+id/name_text"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:hint="@string/course_name"
        android:ems="10"
        android:background="@drawable/outlined_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_text"  />
    <EditText
        android:id="@+id/des_text"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:background="@drawable/outlined_input"
        android:inputType="textPersonName"
        android:hint="@string/course_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"  />
    <EditText
        android:id="@+id/type_text"
        android:ems="10"
        android:background="@drawable/outlined_input"
        android:inputType="textPersonName"
        android:text="@string/course_type"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des_text"  />

    <Button
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:textColor="@color/primary_contrast"
        android:textStyle="bold"
        android:background="@drawable/rounded_button_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_text"  />

</android.support.constraint.ConstraintLayout>