<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/circle_1"
            android:layout_width="800dp"
            android:layout_height="700dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:src="@drawable/login_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/primary_contrast"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/outlined_button"
            android:text="@string/or_register_button"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Username"
            android:background="@drawable/outlined_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Password"
            android:background="@drawable/outlined_input"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_tutor"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="138dp"
            android:layout_height="144dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>