<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homepage_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/homepage_username"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:id="@+id/english_card">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/english"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/english"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/english_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/english" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:id="@+id/france_card">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/france"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/france"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/france_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/france"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/france" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:id="@+id/math_card">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/math"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/math"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/math_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/math"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/math" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:id="@+id/physic_card">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/physic"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/physic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/physic_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/physic"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/physic" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>